kubernetes-profiles/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-aspnetcore-service
spec:
  selector:
    app: hello-aspnetcore-pod
  ports:
    - port: 8081
      targetPort: 80
  type: ClusterIP
