kubernetes-profiles/ingress-controller-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-service
spec:
  selector:
    app: ingress-controller-pod
  ports:
  - port: 80
    name: ingress
    targetPort: 80
  type: LoadBalancer
