kubernetes-profiles/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "kestrel"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - backend:
          serviceName: hello-aspnetcore-service
          servicePort: 8081
  - host: bar.foo.com
    http:
      paths:
      - backend:
          serviceName: hello-aspnetcore-service
          servicePort: 8081
